--- a/consul/consul.yml
+++ b/consul/consul.yml
@@ -32,6 +32,7 @@ spec:
         - -ui
         - -bootstrap-expect=3
         - -server
+        - -client=0.0.0.0
         - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
         - -retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local
         - -retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local
@@ -68,3 +69,17 @@ spec:
   - name: http
     port: 8500
     targetPort: 8500
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: consul
+spec:
+  rules:
+  - host: consul.localhost
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: consul
+          servicePort: 8500
